# python_brain_games

./: .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py  games_logic.py  is_even.py
brain_games/games/: calc.py  calc_logic.py  even.py  even_logic.py  gcd.py  nod.py  nod_game_logic.py  prime.py  prime_logic.py  progression.py  progression_game_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_nod.py  brain_prime.py  brain_progression.py
prime_test/: pyproject.toml
