[tool.poetry]
name = "ushankax_brain_games"
version = "0.1.6"
description = ""
authors = ["ushankax"]
packages = [
    { include = "brain_games" },
  ]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"

[tool.poetry.scripts]
  brain-games = "brain_games.scripts.brain_games:main"
  brain-even = "brain_games.scripts.brain_even:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
