[tool.poetry]
name = "ushankax_brain_games"
version = "0.3.2"
description = "5 mini-games package"
authors = ["ushankax"]
packages = [
    { include = "brain_games" },
  ]
repository = "https://github.com/ushankax/python-project-lvl1"
classifiers = [
  "Topic :: Education",
  "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"

[tool.poetry.scripts]
  brain-games = "brain_games.scripts.brain_games:main"
  brain-even = "brain_games.scripts.brain_even:main"
  brain-calc = "brain_games.scripts.brain_calc:main"
  brain-gcd = "brain_games.scripts.brain_gcd:main"
  brain-progression = "brain_games.scripts.brain_progression:main"
  brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
